#3 [chore] : 린트 적용